docs: Modificações nos requisitos do aplicativo e nas estruturas das tabelas.